add um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis numquam excepturi earum eius blanditiis! Eaque tempora nesciunt voluptatem asperiores quia sunt. Totam ducimus quasi accusamus obcaecati sit autem incidunt esse?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim inventore ipsa. Deserunt nemo reiciendis dignissimos eius tempora excepturi provident pariatur commodi. Iure tempora, asperiores numquam ullam perspiciatis incidunt reprehenderit?</p>
 </body>
 </html>
